--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+main - copia.ipynb
 # Created by https://www.gitignore.io/api/macos,jupyternotebook
 # Edit at https://www.gitignore.io/?templates=macos,jupyternotebook
 
